--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "project site",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend": "cd backend && node server.js",
+    "frontend": "cd backend && cd frontend && npm start",
+    "start": "concurrently \"npm run frontend\" \"npm run backend\"",
+    "back-install": "cd backend && npm i",
+    "front-install": "cd backend && cd frontend && npm i",
+    "intall-prj": "concurrently \"npm run back-install\" \"npm run front-install\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "concurrently": "^8.0.1"
   }
 }
