--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "axios": "^1.4.0",
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "react-redux": "^8.1.1",
+    "reactflow": "^11.7.4",
+    "recharts": "^2.7.2",
+    "redux": "^4.2.1"
   }
 }
