--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "d3-force": "^3.0.0",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
@@ -18,8 +19,9 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.7.4",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
@@ -47,5 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:5000/"
+  "proxy": "http://127.0.0.1:5000/",
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
+  }
 }
