--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.16",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22"
   }
 }
