--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/frontend/node_modules
+/backend/frontend/node_modules
 node_modules
 /node_modules
 /backend/node_modules
@@ -8,3 +8,6 @@ node_modules
 ./backend/.env
 .env
 /backend/*.env
+/backend/env
+*.env
+**/*.env
