--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.13.2",
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
+    "dotenv": "^16.3.1",
     "react-redux": "^8.1.1",
     "reactflow": "^11.7.4",
     "recharts": "^2.7.2",
