--- a/package.json
+++ b/package.json
@@ -22,6 +22,17 @@
     "react-redux": "^8.1.1",
     "reactflow": "^11.7.4",
     "recharts": "^2.7.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^5.13.16",
+    "node-cron": "^3.0.2",
+    "nodemon": "^2.0.22"
   }
 }
